# geneous

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md  readme.md
.github/workflows/: cmake.yml  ubuntu.yml
core/: CMakeLists.txt
core/include/geneous/: matrix.hh  vector.hh
core/include/geneous/impl/: matrix-impl.hh  vector-impl.hh
core/src/: core.cc
core/test/: CMakeLists.txt  matrix_tests.cc  vector_tests.cc
dox/: installation.md  main_page.md  overview.md
include/geneous/: exceptions.hh  matrix-impl.hh  matrix.hh  vector-impl.hh  vector.hh
src/: CMakeLists.txt  geneous-cli.cc
test/: CMakeLists.txt  matrix_tests.cc  vector_tests.cc
tests/: CMakeLists.txt  matrix_tests.cc  vector_tests.cc
